(noise) add option to export the current pattern displayed as a png

--- a/Noise/manifest.ini
+++ b/Noise/manifest.ini
@@ -1,8 +1,9 @@
 [ABOUT]
 NAME = Noise
 AUTHOR = lint0
-VERSION = 0.1
-REQUIRED_VERSION = 2745
+VERSION = 0.9.1
+REQUIRED_VERSION = 3637 ;0.3.0-preview110
+URL = https://github.com/lint069/ac-experiments
 
 [CORE]
 LAZY = FULL
@@ -15,4 +16,4 @@ FUNCTION_MAIN = windowMain
 FUNCTION_SETTINGS = settings
 SIZE = 300, 300
 PADDING = 0, 0
-FLAGS = MAIN, NO_SCROLL_WITH_MOUSE, FADING, SETTINGS
+FLAGS = MAIN, NO_SCROLL_WITH_MOUSE, FADING, SETTINGS, FIXED_SIZE
