--- a/replayUI/manifest.ini
+++ b/replayUI/manifest.ini
@@ -3,7 +3,7 @@ NAME = replay
 AUTHOR = lint0
 VERSION = 0.9
 REQUIRED_VERSION = 3637 ;0.3.0-preview110
-URL = https://github.com/lint069/ac-experiments
+URL = https://github.com/lint069/ac-apps
 
 [CORE]
 LAZY = FULL
