Update URL in manifest.ini

--- a/Noise/manifest.ini
+++ b/Noise/manifest.ini
@@ -3,7 +3,7 @@ NAME = Noise
 AUTHOR = lint0
 VERSION = 0.9.1
 REQUIRED_VERSION = 3637 ;0.3.0-preview110
-URL = https://github.com/lint069/ac-experiments
+URL = https://github.com/lint069/ac-apps
 
 [CORE]
 LAZY = FULL
